<resources>
    <!--    info de base -->
    <string name="app_name">tp1</string>
    <string name="action_settings">Settings</string>

    <!--ajoutee pour le tp1 chmaps de texte de l'appli-->
    <string name="user">user</string>
    <string name="jeu">jeu</string>
    <string name="time">time</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name:</string>
    <string name="birth">birth:</string>


    <!--     Acitivity-->
    <string name="title_activity_user">UserActivity</string>
    <string name="test">test</string>
    <string name="button_validate">validate</string>
    <string name="town">town</string>
    <string name="button_submit">submit</string>
    <string name="title_activity_jeu">JeuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="numero1">1</string>
    <string name="numero2">2</string>
    <string name="numero3">3</string>
    <string name="numero4">4</string>
    <string name="numero5">5</string>
    <string name="numero6">6</string>
    <string name="numero7">7</string>
    <string name="numero8">8</string>
    <string name="numero9">9</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="button_save_profile">save profile</string>
    <string name="add_photo">add your photo</string>
    <string name="add_new_client">add a new Client</string>
    <string name="recycler_view">Clients List</string>

</resources>
