<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="400dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/time" />

                <TextClock
                    android:id="@+id/textClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/first_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200px" />
            </TableRow>

            <TableRow>


                <TextView
                    android:id="@+id/last_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/last_name" />
                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200px" />

            </TableRow>


            <TableRow>

                <TextView
                    android:id="@+id/birth_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/birth" />

                <EditText
                    android:id="@+id/birth_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100px" />
            </TableRow>
            <TableRow>


                <TextView
                    android:id="@+id/town_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/town" />
                <EditText
                    android:id="@+id/town_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200px" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:stepSize="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/button_submit" />
            </TableRow>


        </TableLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <Button
                android:id="@+id/button_validate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="40"
                android:text="@string/button_validate" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>