<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserActivity"
    tools:showIn="@layout/activity_user">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/time" />

                <TextClock
                    android:id="@+id/textClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/first_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_column="1"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200px" />
            </TableRow>

            <TableRow>


                <TextView
                    android:id="@+id/last_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200px" />

            </TableRow>


            <TableRow>

                <TextView
                    android:id="@+id/birth_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_column="1"
                    android:text="@string/birth" />

                <EditText
                    android:id="@+id/birth_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100px" />
            </TableRow>

            <TableRow>


                <TextView
                    android:id="@+id/town_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_column="1"
                    android:text="@string/town" />

                <EditText
                    android:id="@+id/town_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200px" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_submit"
                    android:layout_column="1"
                    android:text="@string/button_submit" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:stepSize="1" />
            </TableRow>

            <TableRow>
                <ImageButton
                    android:id="@+id/button_phone"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_column="1"
                    android:background="@drawable/icone_phone"
                    android:focusable="true" />
                <TextView
                    android:id="@+id/phone_number_text_view"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="2"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:text="" />




            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/button_validate"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_weight="40"
                android:text="@string/button_validate" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

